prog/1stPartyLibs/quirrel/quirrel/testData/diagnostics/space_sep_name_space.diag.txt
ERROR: Separate access operator '?.$' with its following name is forbidden
testData/diagnostics/space_sep_name_space.nut.txt:8:10

t1?.$     foo // NOT OK
          ^--


